--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -130,7 +130,6 @@
 
 .footer ul {
   list-style: none;
-
   font-size: 16px;
   font-weight: 500;
   line-height: 21px;
@@ -172,6 +171,9 @@
   }
 }
 
+.footer a:hover {
+  color: $color-accent;
+}
 
 .footer ul a {
   color: $color-default-white;
@@ -240,4 +242,8 @@
 
 .footer button[type="submit"]:hover {
   animation: bounce 1s;
+}
+
+.footer__socials a:hover .footer__socials svg {
+ color: $color-accent;
 }
