--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -210,3 +210,16 @@ h2 {
   margin: 0;
 }
 
+.decor {
+  position: relative;
+}
+
+.decor::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  left: 0;
+  bottom: -5px;
+  background-color: $color-accent;
+}
