--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,8 @@
 @import "blocks/faq";
 @import "blocks/gallery";
 @import "blocks/footer";
+@import "blocks/intro";
+@import "blocks/login";
 
 // @import "blocks/btn";
 // @import "blocks/modal";
