--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@ $color-light-grey-10a:              rgba(155, 153, 151, 1);
 $color-layout:                      rgba(86, 64, 52, 0.7);
 $color-accent:                      #a87a61;
 $color-back:                        #f1ebe5;
+$color-fill:                        #f0eae4;
 
 $color-transparent:                 rgba(255, 255, 255, 0);
 $color-transparent-15a:             rgba(255, 255, 255, 0.15);
