--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -223,3 +223,26 @@ h2 {
   bottom: -5px;
   background-color: $color-accent;
 }
+
+// .modal {
+//   background-color: $color-default-white;
+// }
+
+// .is-active .modal {
+//   display: block;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100vh;
+//   overflow-y: hidden;
+// }
+
+// .is-active body {
+//   position: relative;
+//   background-color: $color-default-white;
+// }
+
+// .modal--close {
+//   display: none;
+// }
