--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,3 +24,11 @@ $fz-default:                        16px;
 // ---------------------------------
 $tablet-width: 1023px;
 $mobile-width: 767px;
+
+$vp-320:                            320px;
+$vp-768:                            768px;
+$vp-1024:                           1024px;
+
+
+
+$trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
