--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -35,7 +35,11 @@
 
   @media (max-width: $tablet-width) {
     width: 100%;
-    margin-bottom: 35px;
+    margin-bottom: 33px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 36px;
   }
 }
 
@@ -153,6 +157,7 @@
   @media (max-width: $tablet-width) {
     margin: 0;
     padding: 0;
+    padding-left: 2px;
     min-width: 74%;
     max-width: 78%;
     gap: 20%;
